--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,7 +64,9 @@ dependencies {
         exclude module: 'recyclerview-v7'
     }
     androidTestImplementation 'com.android.support.test.espresso:espresso-intents:3.0.1'
-    androidTestImplementation "com.nhaarman:mockito-kotlin:1.1.0"
+//    androidTestImplementation "com.nhaarman:mockito-kotlin:1.1.0"
+    androidTestImplementation 'org.mockito:mockito-core:2.+'
+    androidTestImplementation "org.mockito:mockito-android:2.+"
 
     /*Unit Tests*/
     testImplementation "com.nhaarman:mockito-kotlin:1.1.0"
